# fasteetf

./: .gitignore  Cargo.toml
benches/: parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  parse_structured.rs
src/: arena.rs  cursor.rs  encoder.rs  error.rs  lib.rs  limits.rs  parser.rs  serde_impl.rs  tags.rs  types.rs  visitor.rs  zlib.rs
tests/: compression.rs  encoding.rs  parse.rs  proptest.rs  roundtrip.proptest-regressions  serde.rs  streaming.rs  visitor.rs
tests/common/: mod.rs
