[package]
name = "fasteetf-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fasteetf = { path = "..", features = ["alloc"] }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false

[[bin]]
name = "parse_structured"
path = "fuzz_targets/parse_structured.rs"
test = false
doc = false
